# paper_elobaid_2024_stable-centroidal-mpc

./: .gitignore  .gitmodules  README.md
examples/humanoid/: CMakeLists.txt  Step.m  main.cpp  plot_data.m  run_and_plot.sh
examples/quadruped/: MUJOCO_LOG.TXT  quadruped-test.py  run_and_plot.sh
